add invoice template

--- a/src/app/components/citem/citem.component.html
+++ b/src/app/components/citem/citem.component.html
@@ -1,6 +1,10 @@
-<div>
-    <h3> {{item.concepto}}   {{ item.importe }}</h3>
+
+    <td> {{ item.concepto }}</td>
+    <td> {{ item.importe }}</td>
+
       <!-- <h3>{{ item.usuario.email }}</h3>
           <h5>{{ item.usuario.password }}</h5> -->
-</div>
 
+
+
+          
