Se eliminan las entidades Post y Postitem

--- a/src/app/pages/tab-comprobante/tab-comprobante.page.html
+++ b/src/app/pages/tab-comprobante/tab-comprobante.page.html
@@ -31,7 +31,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-title>
-        Invoice
+        Comprobante
       </ion-title>
       <ion-buttons slot="primary">
         <ion-button color="primary" (click)="crearComprobante()">
