--- a/src/app/pages/tab-comprobante/tab-comprobante.page.html
+++ b/src/app/pages/tab-comprobante/tab-comprobante.page.html
@@ -44,13 +44,12 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content padding>
+  <ion-content padding #mainContent >
     <div class="printable-content">
       <div >
         <ion-card>
           <ion-card-content class="ticket-card">
-            <img [src]="img_url">
-            <h1>{{printMessage}}</h1>
+<!--            <h1>{{printMessage}}</h1>-->
             <h2><b>Razon Social - {{ usuario.nombre }}</b></h2>
             <p>Domicilio - {{ usuario.domicilioCalle }} {{ usuario.domicilioNumero }} {{ usuario.domicilioLocalidad }} {{ usuario.domicilioProvincia }}</p>
             <p>Cuit Nro - {{ comprobante.cuit }}</p>
@@ -123,13 +122,13 @@
         </ion-card>
         <ion-card>
           <ion-card-content class="ticket-card">
-            <h2><i><b>QR code aqui</b></i></h2>
+            <h2><i><b>O ESCANEA EL CODIGO PARA DESCARGAR TU COMPROBANTE EN PDF</b></i></h2>
             <ngx-qrcode id="qrCodeImage" [qrc-element-type]="elementType" [qrc-value] = "value" qrc-class="qr-class">
             </ngx-qrcode>
           </ion-card-content>
         </ion-card>
       </div>
-      <div class="printable-area" id="printable-area">
+      <!--<div class="printable-area" id="printable-area">
         <table class="footer-table">
           <tr>
             <td width="80%">Sub Total: </td>
@@ -140,17 +139,37 @@
             <td>$600</td>
           </tr>
         </table>
+      </div>-->
+    </div>
+<!--Plantilla para imprimir-->
+    <div class="printable-content" [hidden]="true" id="print-template">
+      <div style="width: 100%">
+        <div style="border: 1px solid gray; text-align: center">
+            <h3 style="margin: 2px 10px"><b>Razon Social - {{ usuario.nombre }}</b></h3>
+            <p style="margin: 2px 10px;">Domicilio - {{ usuario.domicilioCalle }} {{ usuario.domicilioNumero }} {{ usuario.domicilioLocalidad }} {{ usuario.domicilioProvincia }}</p>
+            <p style="margin: 2px 10px;">Cuit Nro - {{ comprobante.cuit }}</p>
+            <p style="margin: 2px 10px;">I B Nro - {{ comprobante.cuit }}</p>
+            <p style="margin: 2px 10px;">Inicio actividad: {{ usuario.inicioActividad }}</p>
+            <p style="margin: 2px 10px;">Responsable: {{ usuario.respAnteIva }}</p>
+        </div>
+        <div style="border: 1px solid gray; text-align: center; margin-top: 10px">
+          <h4 style="margin: 2px 10px"><i><b>DATOS DE COMPROBANTE ELECTRONICO EMITIDO</b></i></h4>
+          <p style="margin: 5px 10px;">COMPROBA LA LEGALIDAD DEL COMPROBANTE INGRESANDO EN</p>
+          <h4 style="margin: 5px 10px"><i><b>Y LUEGO CARGA ESTOS DATOS</b></i></h4>
+          <p style="margin: 2px 10px;">Cuit del vendedor: {{comprobante.cuit}}</p>
+          <p style="margin: 2px 10px;">Nro de CAE: 12345678912345</p>
+          <p style="margin: 2px 10px;">Fecha de Emision del Comprobante: 01-01-2018</p>
+          <p style="margin: 2px 10px;">Tipo de comprobante: {{comprobante.tipo}}</p>
+          <p style="margin: 2px 10px;">Punto de venta: 00002</p>
+          <p style="margin: 2px 10px;">Numero de comprobante: {{comprobante.numero}}</p>
+          <p style="margin: 2px 10px;">Tipo y Nro de documento del receptor: DNI 22333444</p>
+        </div>
+        <div style="border: 1px solid gray; text-align: center; margin-top: 10px">
+            <h4 style="margin: 2px 10px"><i><b>O ESCANEA EL CODIGO PARA DESCARGAR TU COMPROBANTE EN PDF</b></i></h4>
+            <ngx-qrcode id="qrCodeImage" [qrc-element-type]="elementType" [qrc-value] = "value" qrc-class="qr-class">
+            </ngx-qrcode>
+        </div>
       </div>
     </div>
   </ion-content>
-  
-  <!-- Infinite Scroll -->
-
-  <ion-infinite-scroll  [disabled]="!habilitado"
-                        threshold="150px"
-                        (ionInfinite)="siguientes($event)">
-      <ion-infinite-scroll-content>
-      </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
-
 </ion-content>
