--- a/src/app/pages/tab-comprobante/tab-comprobante.page.scss
+++ b/src/app/pages/tab-comprobante/tab-comprobante.page.scss
@@ -74,6 +74,7 @@ ion-content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
 
   .detail-table {
