--- a/src/app/pages/tab-comprobante/tab-comprobante.page.html
+++ b/src/app/pages/tab-comprobante/tab-comprobante.page.html
@@ -37,6 +37,9 @@
         <ion-button color="primary" (click)="crearComprobante()">
           <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
         </ion-button>
+        <ion-button color="primary" (click)="crearComprobante2()">
+          <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+        </ion-button>
         <ion-button color="primary" (click)="exportPdf()">
           <ion-icon slot="icon-only" name="print"></ion-icon>
         </ion-button>
